kubernetes/kyak/apps/istio-ingress/gateway/app/gateway.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: istio-gateway
  annotations:
    cert-manager.io/issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/target: gateway.${SECRET_PUBLIC_DOMAIN}
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "${SECRET_PUBLIC_DOMAIN}"
    - name: wildcard-http
      protocol: HTTP
      port: 80
      hostname: "*.${SECRET_PUBLIC_DOMAIN}"
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "${SECRET_PUBLIC_DOMAIN}"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: "${SECRET_PUBLIC_DOMAIN/./-}-tls"
    - name: wildcard-https
      protocol: HTTPS
      port: 443
      hostname: "*.${SECRET_PUBLIC_DOMAIN}"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: "${SECRET_PUBLIC_DOMAIN/./-}-tls"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              shared-gateway-access: "true"
